[gd_scene load_steps=5 format=3 uid="uid://cdhhcj4rraj34"]

[ext_resource type="Script" uid="uid://dtchfep6nj4wn" path="res://item_card.gd" id="1_ce1kl"]
[ext_resource type="Texture2D" uid="uid://ysx2ysy2rkvb" path="res://sprites/SquareBlock.png" id="2_4lcok"]
[ext_resource type="Texture2D" uid="uid://deqqxc4hi138p" path="res://sprites/Panel.png" id="2_ltbao"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lcok"]
size = Vector2(50, 50)

[node name="ItemCard" type="Node2D"]
script = ExtResource("1_ce1kl")

[node name="Carddd" type="ColorRect" parent="."]
visible = false
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0

[node name="Card" type="NinePatchRect" parent="."]
self_modulate = Color(1, 0.172549, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
pivot_offset = Vector2(20, 20)
texture = ExtResource("2_ltbao")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ItemTexture" type="TextureRect" parent="."]
offset_left = -16.0
offset_top = -15.0
offset_right = 16.0
offset_bottom = 17.0
texture = ExtResource("2_4lcok")
stretch_mode = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4lcok")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exited"]
